[package]
name = "rustymud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
] }
simple_logger = "4.*"
log = { version = "^0.4", features = ["std"] }
